--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ cache:
     - $HOME/.composer/cache
 
 php:
-# - 5.4
-# - 5.5
  - 5.6
  - 7.0
 
@@ -23,8 +21,8 @@ env:
   - DB=mysqli MOODLE_BRANCH=MOODLE_29_STABLE
   - DB=mysqli MOODLE_BRANCH=MOODLE_30_STABLE
 
-
 before_install:
+  - phpenv config-rm xdebug.ini
   - cd ../..
   - composer selfupdate
   - composer create-project -n --no-dev moodlerooms/moodle-plugin-ci ci ^1
@@ -41,5 +39,6 @@ script:
   - moodle-plugin-ci csslint
   - moodle-plugin-ci shifter
   - moodle-plugin-ci jshint
+  - moodle-plugin-ci validate
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
