Try to selectively run some tests.
x

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ php:
  - 7.0
 
 matrix:
+    fast_finish: true
   allow_failures:
   - php: 5.6 # travis seems to fail on adding activity - doesn't fail when running behat locally.
 
 env:
  matrix:
-  - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=master
+  - DB=pgsql MOODLE_BRANCH=master TASK=PHP
+  - DB=mysqli MOODLE_BRANCH=master TASK=codecheck
 
 before_install:
   - phpenv config-rm xdebug.ini
@@ -30,13 +31,25 @@ install:
   - moodle-plugin-ci install
 
 script:
-  - moodle-plugin-ci phplint
-  - moodle-plugin-ci phpcpd
-  - moodle-plugin-ci phpmd
-  - moodle-plugin-ci codechecker
-  - moodle-plugin-ci csslint
-  - moodle-plugin-ci shifter
-  - moodle-plugin-ci jshint
-  - moodle-plugin-ci validate
-  - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+    - >
+      if [ "$TASK" = 'PHP' ];
+      then
+         - moodle-plugin-ci phplint
+         - moodle-plugin-ci phpcpd
+         - moodle-plugin-ci phpmd
+      fi
+    - >
+      if [ "$TASK" = 'codecheck' ];
+      then
+         - moodle-plugin-ci phplint
+         - moodle-plugin-ci phpcpd
+         - moodle-plugin-ci phpmd
+         - moodle-plugin-ci codechecker
+         - moodle-plugin-ci csslint
+         - moodle-plugin-ci shifter
+         - moodle-plugin-ci jshint
+         - moodle-plugin-ci validate
+      fi
+
+- moodle-plugin-ci phpunit
+- moodle-plugin-ci behat
