travis php 5.6 passing correctly now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-sudo: required
+sudo: false
 
 cache:
   directories:
@@ -9,10 +9,6 @@ cache:
 php:
  - 5.6
  - 7.0
-
-matrix:
-  allow_failures:
-  - php: 5.6 # travis seems to fail on adding activity - doesn't fail when running behat locally.
 
 env:
  matrix:
