--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: php
 
-dist: precise
-
-sudo: true
+sudo: false
 
 addons:
+  firefox: "47.0.1"
   postgresql: "9.3"
   apt:
     packages:
