--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ php:
 env:
  global:
   - MOODLE_BRANCH=master
+  - MUSTACHE_IGNORE_NAMES=mobile_teacher_form.mustache
  matrix:
   - DB=pgsql
   - DB=mysqli
