--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
   postgresql: "9.4"
   apt:
     packages:
+      - openjdk-8-jre-headless      -
 
 cache:
   directories:
@@ -34,6 +35,7 @@ before_install:
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
+  - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//') JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
 
 install:
   - moodle-plugin-ci install
