--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: php
 
-sudo: true
+sudo: required
 
 services:
   - mysql
 
 addons:
   postgresql: "9.5"
-  chrome: stable
+  firefox: "47.0.1"
   apt:
     packages:
       - openjdk-8-jre-headless
@@ -24,19 +24,19 @@ php:
 env:
   global:
     - MOODLE_BRANCH=master
-    - MUSTACHE_IGNORE_NAMES=mobile_teacher_form.mustache
   matrix:
     - DB=pgsql
     - DB=mysqli
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
+  - nvm install 14.0
+  - nvm use 14.0
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
   - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//') JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
+
 
 install:
   - moodle-plugin-ci install
@@ -52,4 +52,4 @@ script:
   - moodle-plugin-ci grunt
   - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat --profile chrome
+  - moodle-plugin-ci behat
