--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ services:
 
 addons:
   postgresql: "9.5"
-  firefox: "47.0.1"
+  chrome: stable
+
   apt:
     packages:
       - openjdk-8-jre-headless
@@ -53,4 +54,4 @@ script:
   - moodle-plugin-ci grunt
   - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  - moodle-plugin-ci behat --profile chrome
