Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
 language: php
 
-sudo: true
+addons:
+  postgresql: "9.5"
 
 services:
   - mysql
+  - postgresql
+  - docker
 
-addons:
-  postgresql: "9.5"
-  apt:
-    packages:
-      - openjdk-8-jre-headless
 
 cache:
   directories:
@@ -32,12 +30,12 @@ before_install:
   - nvm install 14.0.0
   - nvm use 14.0.0
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci dev-master
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
-  - PATH=$(echo "$PATH" | sed -e 's/:\/usr\/local\/lib\/jvm\/openjdk11\/bin//') JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64
 
 install:
   - moodle-plugin-ci install
+  - docker run -d -p 127.0.0.1:4444:4444 --net=host --shm-size=2g -v $HOME/build/moodle:$HOME/build/moodle selenium/standalone-chrome:3
 
 script:
   - moodle-plugin-ci phplint
@@ -50,4 +48,4 @@ script:
   - moodle-plugin-ci grunt
   - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  - moodle-plugin-ci behat  --profile chrome
