--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "danmarsden/moodle-mod_attendance",
     "type": "moodle-mod",
     "require": {
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "ext-mbstring": "*"
     },
     "extra": {
         "installer-name": "attendance"
