See if I can use chrome for behat tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,4 +80,4 @@ jobs:
           moodle-plugin-ci grunt || true
           moodle-plugin-ci phpdoc || true
           moodle-plugin-ci phpunit || true
-          moodle-plugin-ci behat || true
+          moodle-plugin-ci behat --profile chrome || true
