Ignore mobile mustache file in github action.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,3 +81,5 @@ jobs:
           moodle-plugin-ci phpdoc || true
           moodle-plugin-ci phpunit || true
           moodle-plugin-ci behat --profile chrome || true
+        env:
+          MUSTACHE_IGNORE_NAMES: mobile_teacher_form.mustache
