--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,11 @@ jobs:
         run: moodle-plugin-ci phpdoc
 
       - name: Run phpunit
-        run: moodle-plugin-ci phpunit
+        run: | 
+             moodle-plugin-ci phpunit
+             cd moodle
+             vendor/bin/phpunit --fail-on-risky --disallow-test-output --filter tool_dataprivacy_metadata_registry_testcase
+             vendor/bin/phpunit --fail-on-risky --disallow-test-output --testsuite core_privacy_testsuite --filter provider_testcase 
 
       - name: Run behat
         run: moodle-plugin-ci behat --profile chrome
