update github workflow action for moodle-release.

--- a/.github/workflows/moodle-release.yml
+++ b/.github/workflows/moodle-release.yml
@@ -9,7 +9,7 @@ name: Releasing in the Plugins directory
 on:
   push:
     paths:
-      - '/version.php'
+      - 'version.php'
 
 defaults:
   run:
