Always run all workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,36 +72,47 @@ jobs:
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
 
       - name: Run phplint
+        if: ${{ always() }}
         run: moodle-plugin-ci phplint
 
       - name: Run phpcpd
+        if: ${{ always() }}
         run: moodle-plugin-ci phpcpd || true
 
       - name: Run phpmd
+        if: ${{ always() }}
         run: moodle-plugin-ci phpmd
 
       - name: Run codechecker
+        if: ${{ always() }}
         run: moodle-plugin-ci codechecker
 
       - name: Run validate
+        if: ${{ always() }}
         run: moodle-plugin-ci validate
 
       - name: Run savepoints
+        if: ${{ always() }}
         run: moodle-plugin-ci savepoints
 
       - name: Run mustache
+        if: ${{ always() }}
         run: moodle-plugin-ci phpcpd || true
         env:
           MUSTACHE_IGNORE_NAMES: mobile_teacher_form.mustache
 
       - name: Run grunt
+        if: ${{ always() }}
         run: moodle-plugin-ci grunt
 
       - name: Run phpdoc
+        if: ${{ always() }}
         run: moodle-plugin-ci phpdoc
 
       - name: Run phpunit
+        if: ${{ always() }}
         run: moodle-plugin-ci phpunit
 
       - name: Run behat
+        if: ${{ always() }}
         run: moodle-plugin-ci behat --profile chrome
