--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: mbstring, pgsql, mysqli
+          ini-values: max_input_vars=5000
           tools: phpunit
 
       - name: Deploy moodle-plugin-ci
