--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,117 +1,116 @@
-name: Run all tests
+name: Moodle Plugin CI
 
-# Run this workflow every time a new commit pushed to your repository
 on: [push, pull_request]
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ubuntu-18.04
+
     services:
       postgres:
         image: postgres:10
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
-        # Health check to wait for postgres to start.
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
       mariadb:
-        image: mariadb:10.5
+        image: mariadb:10
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+          MYSQL_CHARACTER_SET_SERVER: "utf8mb4"
+          MYSQL_COLLATION_SERVER: "utf8mb4_unicode_ci"
+
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 3
+
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.3', '8.0']
-        database: ['pgsql', 'mariadb']
+        php: ['7.3', '8.0']
+        moodle-branch: ['master']
+        database: [pgsql, mariadb]
+
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
         with:
-          # Clone in plugin subdir, so we can setup CI in default directory.
           path: plugin
 
-      - name: Install node
-        uses: actions/setup-node@v1
+      - name: Setup PHP ${{ matrix.php }}
+        uses: shivammathur/setup-php@v2
         with:
-          # TODO: Check if we can support .nvmrc
-          node-version: '14.15.0'
-
-      - name: Setup PHP environment
-        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
-        with:
-          php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, pgsql, mysqli
+          php-version: ${{ matrix.php }}
+          extensions: ${{ matrix.extensions }}
           ini-values: max_input_vars=5000
-          tools: phpunit
+          # none to use phpdbg fallback. Specify pcov (Moodle 3.10 and up) or xdebug to use them instead.
+          coverage: none
 
-      - name: Deploy moodle-plugin-ci
+      - name: Initialise moodle-plugin-ci
         run: |
           composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
-          # Add dirs to $PATH
           echo $(cd ci/bin; pwd) >> $GITHUB_PATH
           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
-          # PHPUnit depends on en_AU.UTF-8 locale
           sudo locale-gen en_AU.UTF-8
+          echo "NVM_DIR=$HOME/.nvm" >> $GITHUB_ENV
       - name: Install moodle-plugin-ci
-        # Need explicit IP to stop mysql client fail on attempt to use unix socket.
-        run: moodle-plugin-ci install -vvv --plugin ./plugin --db-host=127.0.0.1
+        run: |
+          moodle-plugin-ci install --plugin ./plugin --db-host=127.0.0.1
         env:
           DB: ${{ matrix.database }}
-          # TODO: Omitted MOODLE_BRANCH results in regex failure, investigate.
-          MOODLE_BRANCH: 'master'
+          MOODLE_BRANCH: ${{ matrix.moodle-branch }}
 
-      - name: Run phplint
+      - name: PHP Lint
         if: ${{ always() }}
         run: moodle-plugin-ci phplint
 
-      - name: Run phpcpd
+      - name: PHP Copy/Paste Detector
+        continue-on-error: true # This step will show errors but will not fail
         if: ${{ always() }}
-        run: moodle-plugin-ci phpcpd || true
+        run: moodle-plugin-ci phpcpd
 
-      - name: Run phpmd
+      - name: PHP Mess Detector
+        continue-on-error: true # This step will show errors but will not fail
         if: ${{ always() }}
         run: moodle-plugin-ci phpmd
 
-      - name: Run codechecker
+      - name: Moodle Code Checker
         if: ${{ always() }}
-        run: moodle-plugin-ci codechecker
+        run: moodle-plugin-ci codechecker --max-warnings 0
 
-      - name: Run validate
-        if: ${{ always() }}
-        run: moodle-plugin-ci validate
-
-      - name: Run savepoints
-        if: ${{ always() }}
-        run: moodle-plugin-ci savepoints
-
-      - name: Run mustache
-        if: ${{ always() }}
-        run: moodle-plugin-ci phpcpd || true
-        env:
-          MUSTACHE_IGNORE_NAMES: mobile_teacher_form.mustache
-
-      - name: Run grunt
-        if: ${{ always() }}
-        run: moodle-plugin-ci grunt
-
-      - name: Run phpdoc
+      - name: Moodle PHPDoc Checker
         if: ${{ always() }}
         run: moodle-plugin-ci phpdoc
 
-      - name: Run phpunit
+      - name: Validating
         if: ${{ always() }}
-        run: | 
-             moodle-plugin-ci phpunit
+        run: moodle-plugin-ci validate
+
+      - name: Check upgrade savepoints
+        if: ${{ always() }}
+        run: moodle-plugin-ci savepoints
+
+      - name: Mustache Lint
+        if: ${{ always() }}
+        run: moodle-plugin-ci mustache        
+        env:
+          MUSTACHE_IGNORE_NAMES: mobile_teacher_form.mustache
+
+      - name: Grunt
+        if: ${{ always() }}
+        run: moodle-plugin-ci grunt --max-lint-warnings 0
+
+      - name: Behat features
+        if: ${{ always() }}
+        run: moodle-plugin-ci behat --profile chrome
+
+      - name: PHPUnit tests
+        if: ${{ always() }}
+        run: |
+             moodle-plugin-ci phpunit --fail-on-warning
              cd moodle
              vendor/bin/phpunit --fail-on-risky --disallow-test-output --filter tool_dataprivacy_metadata_registry_testcase
              vendor/bin/phpunit --fail-on-risky --disallow-test-output --testsuite core_privacy_testsuite --filter provider_testcase 
-
-      - name: Run behat
-        if: ${{ always() }}
-        run: moodle-plugin-ci behat --profile chrome
