--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.3', '8.0']
+        php: ['7.3', '8.0', '8.1']
         moodle-branch: ['master']
         database: [pgsql, mariadb]
 
