--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,11 @@ name: ci
 
 on: [push, pull_request]
 
-env:
-  MUSTACHE_IGNORE_NAMES: 'mobile_teacher_form.mustache'
-
 jobs:
   ci:
     uses: catalyst/catalyst-moodle-workflows/.github/workflows/ci.yml@main
     # Required if you plan to publish (uncomment the below)
     secrets:
       moodle_org_token: ${{ secrets.MOODLE_ORG_TOKEN }}
+    with:
+      disable_mustache: true
